{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 16,
  "lineage": "3aeab746-96a5-1074-a440-53d448914ca1",
  "resources": [
    {
      "module": "module.aws_humangov_infrastructure[\"california\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:954976317008:instance/i-04d33dce92b260fcd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d33dce92b260fcd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "humangov-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-061c24c2b76ab5348",
            "private_dns": "ip-172-31-81-56.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.81.56",
            "public_dns": "ec2-3-89-120-177.compute-1.amazonaws.com",
            "public_ip": "3.89.120.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b6d4817326f11ea8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "humangov-california-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05917b67f9a37722e",
            "tags": {
              "Name": "humangov-california"
            },
            "tags_all": {
              "Name": "humangov-california"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ddb8e0d3f7c708a"
            ]
          },
          "dependencies": [
            "module.aws_humangov_infrastructure.aws_security_group.state_ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"california\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976317008:security-group/sg-00ddb8e0d3f7c708a",
            "description": "Allow traffic on ports 22 and 80",
            "egress": [],
            "id": "sg-00ddb8e0d3f7c708a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "humangov-california-ec2-sg",
            "name_prefix": "",
            "owner_id": "954976317008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "humangov-california"
            },
            "tags_all": {
              "Name": "humangov-california"
            },
            "timeouts": null,
            "vpc_id": "vpc-0230e4f316ce1d86f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"florida\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:954976317008:instance/i-0f107ccde33cd2c8a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f107ccde33cd2c8a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "humangov-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0541d6b26f5c34548",
            "private_dns": "ip-172-31-83-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.83.121",
            "public_dns": "ec2-44-202-73-140.compute-1.amazonaws.com",
            "public_ip": "44.202.73.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a0993a431209f5f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "humangov-florida-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05917b67f9a37722e",
            "tags": {
              "Name": "humangov-florida"
            },
            "tags_all": {
              "Name": "humangov-florida"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06058a69a20ee0edf"
            ]
          },
          "dependencies": [
            "module.aws_humangov_infrastructure.aws_security_group.state_ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"florida\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976317008:security-group/sg-06058a69a20ee0edf",
            "description": "Allow traffic on ports 22 and 80",
            "egress": [],
            "id": "sg-06058a69a20ee0edf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "humangov-florida-ec2-sg",
            "name_prefix": "",
            "owner_id": "954976317008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "humangov-florida"
            },
            "tags_all": {
              "Name": "humangov-florida"
            },
            "timeouts": null,
            "vpc_id": "vpc-0230e4f316ce1d86f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"texas\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:954976317008:instance/i-066b652c2ed5c2793",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066b652c2ed5c2793",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "humangov-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-078314188d9d81c47",
            "private_dns": "ip-172-31-94-69.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.94.69",
            "public_dns": "ec2-54-211-128-237.compute-1.amazonaws.com",
            "public_ip": "54.211.128.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ecb3b0e986a51929",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "humangov-texas-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05917b67f9a37722e",
            "tags": {
              "Name": "humangov-texas"
            },
            "tags_all": {
              "Name": "humangov-texas"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a7947a9f508d9289"
            ]
          },
          "dependencies": [
            "module.aws_humangov_infrastructure.aws_security_group.state_ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"texas\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976317008:security-group/sg-0a7947a9f508d9289",
            "description": "Allow traffic on ports 22 and 80",
            "egress": [],
            "id": "sg-0a7947a9f508d9289",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "humangov-texas-ec2-sg",
            "name_prefix": "",
            "owner_id": "954976317008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "humangov-texas"
            },
            "tags_all": {
              "Name": "humangov-texas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0230e4f316ce1d86f"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}